tests/cases/should_fail/patterns/malformed_range_pat.hash
// run=fail, stage=parse

main := () => {
    match k {
        // Should fail since you cannot apply `()` on this pattern
        1..2() => {};
    }
}
