tests/cases/should_fail/patterns/malformed_range_pat.stderr
error: expected an arrow `=>` 
 --> $DIR/malformed_range_pat.hash:4:13
3 |           // Should fail since you cannot apply `()` on this pattern
4 |           1..2() => {};
  |               ^^ here
5 |       }
